# cpp-jinja-enums

./: LICENSE  README.md  meson.build
src/: enum_spec.hh  from_string.hh.jinja  from_string.py
subprojects/: .gitignore
test/: meson.build
test/enum_from_string/: enum_from_string.cc  enum_from_string.hh
